odevzdani/tests/invalid_sem/com/com10.java
class Main {
    static void run() {
        String b = foo();
    }
    static String foo (int a) {
        return "Hello world\n";
    }
}
